[package]
name = "bookforge"
version = "0.1.0"
edition = "2024"
description = "一个用于处理EPUB文件的Rust库"
license = "MIT"
authors = ["FWW"]

[lib]
name = "bookforge"
path = "src/lib.rs"

[[bin]]
name = "bookforge"
path = "src/main.rs"

[dependencies]
zip = "4.0"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }
quick-xml = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
scraper = "0.23"

[dev-dependencies]
tempfile = "3.0"
